<resources>
    <string name="app_name">Notifications Lab</string>

    <string name="nav_header_description">Logo</string>

    <string name="home_title">Home</string>
    <string name="Welcome">Benvenuto in Notifications Lab</string>
    <string name="home_text">Questa applicazione è un laboratorio interattivo progettato per esplorare le diverse tipologie di notifiche disponibili su Android. Ogni sezione è un capitolo di questo tutorial: puoi navigare tra le funzionalità usando le frecce oppure accedere direttamente a una sezione specifica tramite il menu in alto a sinistra.</string>
    <string name="home_text_bottom">Ciascun esempio è accompagnato da una breve spiegazione per aiutarti a comprenderne il comportamento della notifica e come interagire con essa.</string>

    <string name="demo_button">DEMO</string>

    <string name="toast_permission_required_service">Permesso richiesto</string>

    <!-- Simple notification -->
    <string name="simple_notification_title">Simple notification</string>
    <string name="simple_notif_descr">Questa è la notifica più comune: un semplice avviso composto da un titolo e un testo.</string>
    <string name="weather_text">Per rendere questa notifica piú interessante, prova ad abilitare le notifiche relative al meteo e personalizza l\'intervallo di tempo tra ciascun aggiornamento.</string>
    <string name="weather_switch_text">Notifiche meteo</string>

    <!-- Weather notification -->
    <string name="weather_api_key">a27d381d28d670043d522fb859a7b797</string>
    <string name="weather_update_interval">Ricevi la notifica ogni:</string>
    <string-array name="weather_intervals_array">
        <item>15 minuti</item>
        <item>30 minuti</item>
        <item>60 minuti</item>
        <item>120 minuti</item>
    </string-array>

    <!-- Expandable notification -->
    <string name="expandable_notification_title">Expandable notification</string>
    <string name="expandable_notif_descr">Una notifica può mostrare più di un semplice testo. Qui puoi generare notifiche che, una volta espanse, rivelano un testo più lungo o un\'immagine.</string>
    <string name="expandable_notif_text_descr">Notifica espandibile con testo </string>
    <string name="expandable_notif_picture_descr">Notifica espandibile con immagine </string>
    <string name="news_text">Prova anche ad attivare le notifiche relative alle news, con relativo intervallo, per vederle all\'opera.</string>"
    <string name="news_switch_text">Notifiche news</string>
    <string name="news_update_interval">Ricevi la notifica ogni:</string>
    <string-array name="news_intervals_array">
        <item>15 minuti</item>
        <item>30 minuti</item>
        <item>60 minuti</item>
        <item>120 minuti</item>
    </string-array>

    <!-- Actions notification -->
    <string name="actions_notification_title">Actions notification</string>
    <string name="actions_notif_descr">Rendi le tue notifiche interattive. In questa sezione puoi creare notifiche con pulsanti di azione, che permettono all\'utente di eseguire operazioni rapide senza aprire l\'app. \nPuoi anche provare a rispondere direttamente a un messaggio dalla notifica.</string>
    <string name="actions_button">Notifica con azioni</string>
    <string name="actions_string">Ultimo testo ricevuto: %1$s</string>
    <string name="actions_reset">Resetta</string>
    <string name="actions_not_text_received">Nessun testo ricevuto.</string>
    <string name="toast_action_color_set_red">Impostato il colore Rosso</string>
    <string name="toast_action_color_set_yellow">Impostato il colore Giallo</string>
    <string name="toast_action_string">Stringa ricevuta: %1$s</string>


    <!-- Reply notification -->
    <string name="reply_notification_title">Reply notification</string>
    <string name="reply_notif_descr">Questa notifica simula un messaggio in arrivo e include un campo di testo per rispondere direttamente dalla barra di stato. Si tratta di una funzionalità fondamentale per le app di messaggistica, pensata per favorire risposte rapide e immediate</string>
    <string name="reply_button">Notifica con risposta</string>

    <!-- Chat notification -->
    <string name="chat_notification_title">Chat notification</string>
    <string name="chat_notif_descr">Usa il chatbot integrato per scrivere e inviare risposte direttamente dalla notifica. Digita un messaggio e premi il pulsante per inviare.</string>
    <string name="chat_clear_button">Cancella chat</string>
    <string name="chat_write_hint">Scrivi qualcosa…</string>
    <string name="chat_send_button">Invia</string>

    <!-- Progress notification -->
    <string name="progress_notification_title">Progress notification</string>
    <string name="progress_notif_descr">Per operazioni di lunga durata, come download o elaborazioni, è utile mostrare lo stato di avanzamento. \nPremi il primo pulsante per avviare una notifica una barra di progresso che si aggiorna in tempo reale.</string>
    <string name="action_cancel">Cancella</string>
    <string name="progress_button">Notifica con barra di progresso</string>
    <!-- Live Update notification -->
    <string name="liveUpdate_notification_title">Live Update Notification</string>
    <string name="liveUpdate_notification_description">Premendo il pulsante sottostante, invece, potrai visualizzare una notifica che simula il tracciamento in tempo reale di una spedizione, con aggiornamenti progressivi del suo stato.</string>
    <string name="demo_update_notification_button">Aggiorna notifica demo</string>
    <string name="live_button">Notifica con barra live</string>

    <!-- Media player notification -->
    <string name="media_player_notif_title">Media player notification</string>
    <string name="media_player_notif_descr">Questa è la notifica standard per le app per il controllo multimediale. Viene gestita da un servizio dedicato che ne garantisce il funzionamento anche quando l\'app è in background e consente di eseguire i comandi provenienti da dispositivi esterni, come gli auricolari.</string>

    <!-- Call notification -->
    <string name="call_notification_description">Questa speciale notifica usa uno stile ad alta priorità per simulare una chiamata in arrivo. Puoi inserire un ritardo in secondi  per programmarne la visualizzazione. Prova a chiudere l\' applicazione mentre aspetti la chiamata.</string>
    <string name="call_notification_delay_hint">Ritardo (secondi)</string>
    <string name="call_notification_schedule_button">Pianifica Chiamata</string>

    <string name="call_notification_invalid_delay">Per favore, inserisci un ritardo valido.</string>
    <string name="fragment_call_title">Call notification</string>

    <string name="toast_call_scheduled">Chiamata pianificata tra %1$d secondi.</string>
    <string name="toast_call_accepted">Chiamata accettata</string>
    <string name="toast_call_denied">Chiamata rifiutata</string>
    <string name="toast_call_ended">Chiamata terminata</string>

    <!-- Email notification -->
    <string name="email_notification_title">Email Notification</string>
    <string name="email_notif_descr">Questo esempio mostra come tre notifiche distinte vengano automaticamente raggruppate dal sistema sotto un\'unica intestazione, in modo simile a quanto avviene in un\'app di posta elettronica.</string>

    <!-- Final fragment -->
    <string name="final_fragment_title">End of Tutorial</string>
    <string name="final_fragment_text">Hai completato il tour delle notifiche! </string>

    <string name="nav_button_previous">Precedente</string>
    <string name="nav_button_next">Successivo</string>

</resources>
