<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ActionsNotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNotificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actions_notification_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvNotificationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actions_notif_descr"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:lineSpacingMultiplier="1.2"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnShowNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_button" />

    </LinearLayout>
</ScrollView>
