<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chat_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_notif_descr"
        android:textAppearance="@style/MyBody"
        android:justificationMode="inter_word"
        android:padding="8dp"
        android:layout_alignParentTop="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chat_description_text"
        android:layout_above="@id/input_area"
        />

    <LinearLayout
        android:id="@+id/input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navigation_buttons_container"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chat_write_hint"
            android:inputType="textMultiLine"
            android:autofillHints="no" />

        <Button
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_send_button"
            android:textAppearance="@style/MyButton"
            android:textColor="@color/colorSecondary" />

        <Button
            android:id="@+id/btn_clear_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/chat_clear_button"
            android:textAppearance="@style/MyButton"
            android:textColor="@color/colorSecondary" />
    </LinearLayout>

    <include
        android:id="@+id/navigation_buttons_container"
        layout="@layout/view_navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/nav_container_margin_bottom" />

</RelativeLayout>