<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ActionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_buttons_container"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:justificationMode="inter_word"
                android:text="@string/actions_notif_descr"
                android:textAppearance="@style/MyBody" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/actions_button"
                    android:textAppearance="@style/MyBody" />

                <Button
                    android:id="@+id/btnActionNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/demo_button"
                    android:textAppearance="@style/MyButton"
                    android:textColor="@color/colorSecondary" />

            </LinearLayout>

            <TextView
                android:id="@+id/colorView"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginVertical="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/reply_button"
                    android:textAppearance="@style/MyBody" />

                <Button
                    android:id="@+id/btnReplyNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/demo_button"
                    android:textAppearance="@style/MyButton"
                    android:textColor="@color/colorSecondary" />
            </LinearLayout>

            <TextView
                android:id="@+id/actionsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyBody"
                android:justificationMode="inter_word"
                android:layout_marginVertical="15dp"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/navigation_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/nav_container_padding_bottom"
        android:paddingHorizontal="@dimen/nav_container_padding_horizzontal"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="@dimen/nav_button_size"
            android:layout_height="@dimen/nav_button_size"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/nav_button_previous"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_left" />

        <Button
            android:id="@+id/btn_clear_actions"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/nav_button_size"
            android:layout_centerHorizontal="true"
            android:text="@string/actions_reset"
            android:textAppearance="@style/MyButton"
            android:textColor="@color/colorSecondary" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="@dimen/nav_button_size"
            android:layout_height="@dimen/nav_button_size"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/nav_button_next"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_right" />

    </RelativeLayout>

</RelativeLayout>
