<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SimpleNotificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_buttons_container"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyHeadline"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/simple_notif_descr" />

            <Button
                android:id="@+id/btnSimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyButton"
                android:text="@string/demo_button"
                android:layout_gravity="center"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swtWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_switch_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/MyHeadline"
                    android:text="@string/weather_update_interval"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/navigation_buttons_container"
        layout="@layout/view_navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>