<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProgressNotificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_buttons_container"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/progress_notif_descr"
                android:textAppearance="@style/MyBody" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/progress_button"
                    android:textAppearance="@style/MyBody" />

                <Button
                    android:id="@+id/btnProgressNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/demo_button"
                    android:textAppearance="@style/MyButton"
                    android:textColor="@color/colorSecondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/live_button"
                    android:textAppearance="@style/MyBody" />

                <Button
                    android:id="@+id/btnLiveUpdate_create"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/demo_button"
                    android:textAppearance="@style/MyButton"
                    android:textColor="@color/colorSecondary" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/navigation_buttons_container"
        layout="@layout/view_navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>
